fix namespacing and changed tooltip class to tooltipwp_tooltip

--- a/app/assets/css/tooltipwp.css
+++ b/app/assets/css/tooltipwp.css
@@ -1,4 +1,4 @@
-.tooltip::after {
+.tooltipwp_tooltip::after {
     /* content: attr(data-icon);  */
     font-family: "Font Awesome 5 Free";
     font-weight: 900;
